# fuckBookWalker

./: .gitignore  devenv.nix  devenv.yaml  pyproject.toml
bookphucker/: config.py  jp.py
