[project]
name = "fuckBookWalker"
version = "0.1.5"
description = "Download books from bookwalker.jp"
authors = [{ name = "VermiIIi0n", email = "dungeon.behind0t@icloud.com" }]
requires-python = "~=3.12"
readme = "README.md"
license = "MIT"
keywords = [
    "utilities",
    "bookwalker",
    "automation",
    "novel",
    "webnovel",
    "lightnovel",
    "manga",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "ujson>=5.9.0,<6",
    "pydantic>=2.6.1,<3",
    "pillow>=10.2.0,<11",
    "ebooklib>=0.18,<0.19",
    "selenium>=4.18.1,<5",
    "webdriver-manager>=4.0.1,<5",
    "beautifulsoup4>=4.12.3,<5",
    "lxml>=5.1.0,<6",
    "types-ujson>=5.9.0.0,<6",
    "undetected-chromedriver>=3.5.5,<4",
    "setuptools>=69.1.1,<70",
    "platformdirs>=4.2.0,<5",
    "rich>=13.7.1,<14",
    "semantic-version>=2.10.0,<3",
    "requests>=2.31.0,<3",
]

[project.urls]
Homepage = "https://github.com/VermiIIi0n/fuckBookWalker"
Issues = "https://github.com/VermiIIi0n/fuckBookWalker/issues"

[project.scripts]
bookbaker = "bookphucker.cli:run"

[dependency-groups]
dev = [
    "mypy>=1.8.0,<2",
    "autopep8>=2.0.4,<3",
    "types-requests>=2.31.0.20240406,<3",
]

[tool.hatch.build.targets.sdist]
include = ["bookphucker"]

[tool.hatch.build.targets.wheel]
include = ["bookphucker"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError.*",
    "return NotImplemented",
    "warnings\\.warn.*",
    "def main()",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "except ImportError",
    "@overload",
    "@abstractmethod",
]
include = ["bookfucker/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--verbose --cov-append --cov-report term --cov fuckbookwalker"

[tool.mypy]
enable_error_code = [
    "type-var",
    "call-overload",
    "abstract",
    "override",
    "unused-awaitable",
    "unused-coroutine",
    "var-annotated",
    "index",
    "assignment",
    "var-annotated",
    "misc",
    "redundant-cast",
    "comparison-overlap",
    "redundant-expr",
    "truthy-bool",
]
disable_error_code = [
    "type-arg",
    "no-untyped-def",
    "no-untyped-call",
    "no-redef",
]
plugins = "pydantic.mypy"
ignore_missing_imports = true
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
show_column_numbers = true
show_error_context = true
check_untyped_defs = true
warn_unreachable = false
show_error_codes = true
warn_return_any = false
warn_no_return = true
show_traceback = false
color_output = true
pretty = true

[tool.pydantic-mypy]
#init_forbid_extra = true
#init_typed = true
#warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.sphinx-autodoc]
# Display the docstring of modules, classes, and functions
# even if they don't have a docstring
# Possible values: True, False (default: False)
# Set to True to display the docstring even if it is empty
# or if the module/class/function doesn't have a docstring.
member-order = "bysource"
show-inheritance = true
undoc-members = true
